home/i18n/zh-cn/docusaurus-plugin-content-docs/version-1.7.x/help/oracle.md
---
id: oracle  
title: 监控：ORACLE数据库监控      
sidebar_label: ORACLE数据库   
keywords: [开源监控系统, 开源数据库监控, Oracle数据库监控]
---

> 对ORACLE数据库的通用性能指标进行采集监控。

## 注意, 必须添加 ORACLE jdbc 驱动 jar

- 下载 ORACLE jdbc 驱动 jar 包，例如 [ojdbc8.jar](https://repo1.maven.org/maven2/com/oracle/database/jdbc/ojdbc8/23.4.0.24.05/ojdbc8-23.4.0.24.05.jar) [oracle-i18n](https://repo.mavenlibs.com/maven/com/oracle/database/nls/orai18n/21.5.0.0/orai18n-21.5.0.0.jar)
- 将 jar 包复制到 `hertzbeat/ext-lib` 目录下。
- 重启 HertzBeat 服务。

### 配置参数

| 参数名称   | 参数帮助描述                                               |
|--------|------------------------------------------------------|
| 监控Host | 被监控的对端IPV4，IPV6或域名。注意⚠️不带协议头(eg: https://, http://)。 |
| 任务名称   | 标识此监控的名称，名称需要保证唯一性。                                  |
| 端口     | 数据库对外提供的端口，默认为1521。                                  |
| 查询超时时间 | 设置SQL查询未响应数据时的超时时间，单位ms毫秒，默认3000毫秒。                  |
| 数据库名称  | 数据库实例名称，可选。                                          |
| 用户名    | 数据库连接用户名，可选。如果使用 sys 用户，可填写成"sys as sysdba"          |
| 密码     | 数据库连接密码，可选                                           |
| URL    | 数据库连接URL，可选，若配置，则URL里面的数据库名称，用户名密码等参数会覆盖上面配置的参数      |
| 采集间隔   | 监控周期性采集数据间隔时间，单位秒，可设置的最小间隔为30秒                       |
| 是否探测   | 新增监控前是否先探测检查监控可用性，探测成功才会继续新增修改操作                     |
| 描述备注   | 更多标识和描述此监控的备注信息，用户可以在这里备注信息                          |

### 采集指标

#### 指标集合：基本信息

|       指标名称       | 指标单位 | 指标帮助描述  |
|------------------|------|---------|
| database_version | 无    | 数据库版本   |
| hostname         | 无    | 主机名称    |
| instance_name    | 无    | 数据库实例名称 |
| startup_time     | 无    | 数据库启动时间 |
| status           | 无    | 数据库状态   |

#### 指标集合：表空间

|      指标名称       | 指标单位 | 指标帮助描述  |
|-----------------|------|---------|
| file_id         | 无    | 文件ID    |
| file_name       | 无    | 文件名称    |
| tablespace_name | 无    | 所属表空间名称 |
| status          | 无    | 状态      |
| bytes           | MB   | 大小      |
| blocks          | 块    | 区块数量    |

#### 指标集合：会话总数

| 指标名称  | 指标单位 | 指标帮助描述 |
|-------|------|--------|
| count | 无    | 总数     |

#### 指标集合：活动会话

| 指标名称  | 指标单位 | 指标帮助描述 |
|-------|------|--------|
| count | 无    | 总数     |

#### 指标集合：后台会话

| 指标名称  | 指标单位 | 指标帮助描述 |
|-------|------|--------|
| count | 无    | 总数     |

#### 指标集合：连接

| 指标名称     | 指标单位 | 指标帮助描述 |
|----------|------|--------|
| username | 无    | 用户名    |
| count    | 无    | 总数     |

#### 指标集合：性能

| 指标名称 | 指标单位 |                指标帮助描述                 |
|------|------|---------------------------------------|
| qps  | QPS  | I/O Requests per Second 每秒IO请求数量      |
| tps  | TPS  | User Transaction Per Sec 每秒用户事物处理数量   |
| mbps | MBPS | I/O Megabytes per Second 每秒 I/O 兆字节数量 |

#### 指标集合：表空间百分比

| 指标名称            | 指标单位   | 指标帮助描述 |
|-----------------|--------|--------|
| tablespace_name | 无      | 表空间名   |
| total           | 无      | 全部     |
| used            | 无      | 已用     |
| free            | 无      | 空闲     |
| used_percentage | 百分比(%) | 已用百分比  |
| free_percentage | 百分比(%) | 空闲百分比  |

#### 指标集合：进程

| 指标名称          | 指标单位 | 指标帮助描述 |
|---------------|------|--------|
| process_count | 无    | 进程数    |

#### 指标集合：事务

| 指标名称      | 指标单位 | 指标帮助描述 |
|-----------|------|--------|
| commits   | t/s  | 提交数    |
| rollbacks | t/s  | 回滚数    |

#### 指标集合：等待

| 指标名称                 | 指标单位   | 指标帮助描述    |
|----------------------|--------|-----------|
| concurrent_wait_time | 毫秒(ms) | 并发等待时间    |
| commit_wait_time     | 毫秒(ms) | 提交等待时间    |
| app_wait_time        | 毫秒(ms) | 应用等待时间    |
| network_wait_time    | 毫秒(ms) | 网络等待时间    |
| system_io_wait_time  | 毫秒(ms) | 系统I/O等待时间 |
| user_io_wait_time    | 毫秒(ms) | 用户I/O等待时间 |
| configure_wait_time  | 毫秒(ms) | 配置等待时间    |
| scheduler_wait_time  | 毫秒(ms) | 调度等待时间    |

#### 指标集合：CPU 状态

| 指标名称 | 指标单位 | 指标帮助描述 |
|------|------|--------|
| type | 无    | 类型     |
| num  | 无    | 数量     |

#### 指标集合：内存状态

| 指标名称 | 指标单位 | 指标帮助描述 |
|------|------|--------|
| type | 无    | 类型     |
| num  | 无    | 数量     |

#### 指标集合：缓存命中率

| 指标名称                   | 指标单位 | 指标帮助描述   |
|------------------------|------|----------|
| lib_cache_hit_ratio    | 无    | 库缓存命中率   |
| buffer_cache_hit_ratio | 无    | 缓冲区缓存命中率 |

#### 指标集合：慢查询

| 指标名称           | 指标单位 | 指标帮助描述 |
|----------------|------|--------|
| sql_id         | 无    | sql 主键 |
| child_number   | 无    | 子编号    |
| executions     | 次    | 执行数    |
| per_secs       | 秒    | 每秒执行数  |
| cpu_secs       | 秒    | 每秒 CPU |
| buffer_gets    | 无    | 获得的缓冲区 |
| disk_reads     | 无    | 磁盘读取   |
| fetches        | 无    | 获取数量   |
| parse_calls    | 无    | 解析调用   |
| optimizer_cost | 无    | 优化器成本  |
| sql_text       | 无    | SQL 文本 |

#### 指标集合：用户信息

| 指标名称                | 指标单位 | 指标帮助描述                       |
|---------------------|------|------------------------------|
| username            | 无    | 用户名                          |
| account_status      | 无    | 账号状态                         |
| lock_date           | 无    | 如果账户状态为 LOCKED，则显示锁定账户的日期和时间 |
| expiry_date         | 无    | 密码的失效时间                      |
| expiry_seconds      | 秒    | 密码剩余有效时间,小于 0 表示已失效          |
| created             | 无    | 创建时间                         |
| authentication_type | 无    | 认证类型                         |
